--- a/css/invie.css
+++ b/css/invie.css
@@ -1,8 +1,14 @@
+
+body {
+    font-family: 'Allerta', sans-serif;
+}
 .titulo{
+    font-family: 'Montserrat', sans-serif;
     font-size: 70px;
 }
 
 .title-a{
+    font-family: 'Montserrat', sans-serif;
     font-size: 24px;
 }
 
@@ -15,6 +21,7 @@
 }
 
 .guitarras h2{
+    font-family: 'Montserrat', sans-serif;
     font-size: 35px;
 }
 
