--- a/css/invie.css
+++ b/css/invie.css
@@ -32,4 +32,13 @@ body {
 
 .menu{
     font-size: 24 px;
+    display: inline-block
+}
+
+.menu li{
+  display: inline-block;
+}
+
+.logotipo{
+  display: inline-block;
 }
