Arregla disposición en la seccion guitarras

--- a/css/invie.css
+++ b/css/invie.css
@@ -62,3 +62,29 @@ body {
     width: 800px;
     margin: auto;
 }
+.guitarra{
+  padding: 10px;
+  margin: 10px;
+  overflow: hidden;
+}
+
+.guitarra ol{
+  padding: 0;
+}
+
+.right{
+  float: right;
+}
+
+.left{
+  float: left;
+}
+
+.contenedor-guitarra-a{
+  padding-left: 20px;
+}
+
+.contenedor-guitarra-b{
+  margin-left: 370px;
+}
+
