--- a/css/invie.css
+++ b/css/invie.css
@@ -2,6 +2,9 @@
   padding: 10px;
   margin: 10 px;
 }
+.header{
+  position: relative;
+}
 body {
     font-family: 'Allerta', sans-serif;
     margin: 0
@@ -46,7 +49,9 @@ body {
 
 .menu{
     font-size: 24 px;
-    display: inline-block
+    display: inline-block;
+    position: absolute;
+    right: 0;
 }
 
 .menu li{
@@ -65,7 +70,6 @@ body {
 .guitarra{
   padding: 10px;
   margin: 10px;
-  overflow: hidden;
 }
 
 .guitarra ol{
@@ -74,10 +78,14 @@ body {
 
 .right{
   float: right;
+  position: relative;
+  top: -127 px;
 }
 
 .left{
   float: left;
+  position: relative;
+  top: 80px;
 }
 
 .contenedor-guitarra-a{
