Agrega bordes y formulario de contacto en footer

--- a/css/invie.css
+++ b/css/invie.css
@@ -1,98 +1,145 @@
-*{
+/** {
+  width: tamaño;
+  height: tamaño;
   padding: 10px;
-  margin: 10 px;
-}
-.header{
-  position: relative;
-}
+  padding-top: 10px;
+  padding-right: 13px;
+  padding-left: 15px;
+  padding-bottom: 5px;
+  padding: 10px 13px 5px 15px;
+  margin: 10px;
+  margin-top: 10px;
+  margin-right: 13px;
+  margin-left: 15px;
+  margin-bottom: 5px;
+  margin: 10px 13px 5px 15px;
+  border: 2px solid red;
+}*/
+
 body {
-    font-family: 'Allerta', sans-serif;
-    margin: 0
+  font-family: 'Allerta', sans-serif;
+  margin: 0;
 }
 
-.titulo{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 70px;
-    margin-bottom: 15px;
-    margin-top: 70px;
+button {
+  border-radius: 5px;
+  border: none;
+  background: #fd324e;
+  color: white;
+  padding: 7px;
 }
 
-.title-a{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
-    margin-top: 0;
+.titulo {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 70px;
+  margin-bottom: 0;
+  margin-top: 70px;
 }
 
-.title-b{
-    font-size: 50px;
-    margin-bottom: 20px;
+.title-a {
+  font-size: 24px;
+  margin-top: 0;
 }
 
-.guitarras{
-    color: #1F313C;
+.title-b {
+  font-size: 50px;
+  margin-bottom: 20px;
 }
 
-.guitarras h2{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 35px;
+.guitarras {
+  color: #1F313C;
 }
 
-.portada{
-    background-image: url("../images/background.png");
-    color: white;
-    padding: 20px;
+.guitarras h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 35px;
 }
 
-.portada button{
+
+.portada {
+  background-image: url('../images/background.png');
+  color: white;
+  padding: 20px;
+}
+
+.portada button {
   margin-bottom: 70px;
 }
 
-.menu{
-    font-size: 24 px;
-    display: inline-block;
-    position: absolute;
-    right: 0;
+
+.menu {
+  font-size: 24px;
+  display: inline-block;
+  position: absolute;
+  right: 0;
 }
 
-.menu li{
+.menu li {
   display: inline-block;
   margin-left: 30px;
 }
 
-.logotipo{
+
+.logotipo {
   display: inline-block;
 }
 
-.contenedor{
-    width: 800px;
-    margin: auto;
-}
-.guitarra{
-  padding: 10px;
-  margin: 10px;
+
+.contenedor {
+  width: 800px;
+  margin: auto;
 }
 
-.guitarra ol{
+.guitarra {
+  margin: 10px;
+  padding: 10px;
+  /*overflow: hidden;*/
+  border: 1px solid #1F313C;
+  border-radius: 8px;
+}
+.guitarra ol {
   padding: 0;
 }
 
-.right{
+
+.derecha {
   float: right;
   position: relative;
-  top: -127 px;
+  top: -127px;
 }
 
-.left{
+.izquierda {
   float: left;
   position: relative;
   top: 80px;
 }
 
-.contenedor-guitarra-a{
+.contenedor-guitarra-a {
   padding-left: 20px;
 }
-
-.contenedor-guitarra-b{
+.contenedor-guitarra-b {
   margin-left: 370px;
+
 }
 
+.header {
+  position: relative;
+}
+
+
+.footer {
+  background: #273b47;
+}
+
+.contacto img {
+  display: block;
+}
+
+.contacto strong {
+  display: block;
+}
+
+.contacto a {
+  color: white;
+  text-decoration: none;
+}
