--- a/css/invie.css
+++ b/css/invie.css
@@ -21,7 +21,7 @@ body {
   margin: 0;
 }
 
-button {
+.button {
   border-radius: 5px;
   border: none;
   background: #fd324e;
@@ -131,6 +131,13 @@ button {
   background: #273b47;
 }
 
+.contacto {
+  display: flex;
+  width: 300px;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
 .contacto img {
   display: block;
 }
@@ -142,4 +149,46 @@ button {
 .contacto a {
   color: white;
   text-decoration: none;
+  margin: 10px 10px 10px 0;
 }
+
+
+.footer .contenedor {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.formulario {
+  display: flex;
+  width: 400px;
+  color: white;
+  padding: 50px 10px;
+}
+
+
+.col1, .col2 {
+  display: flex;
+  flex-direction: column;
+}
+
+.col1 {
+  margin-right: 15px;
+}
+.col2 {
+  align-items: flex-start;
+}
+
+.intereses label {
+  font-size: 12px;
+}
+
+.formulario label, .sexo, .intereses {
+  margin-bottom: 10px;
+}
+
+
+.sexo {
+  margin-top: 10px;
+}
+ 
